--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ description: Why not.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme 
+
